SilentSignals project fixed